--- a/index.html
+++ b/index.html
@@ -230,6 +230,105 @@
             </ul>
         </li>
         <li>
+            <div class="select-item parent" data-value="secret7">
+                <div class="switch-label">
+                    <span class="parent-icon icon glyphicon glyphicon-plus"></span>
+                    <div>&nbsp;Secret 7's</div>
+                </div>
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+
+            <ul class="children">
+                <li>
+                    <div class="select-item" data-value="hiking7">
+                        <div class="switch-label">
+                            <span class="maki maki-marker-stroked maki-lg" style="color:#8dd3c7"></span>
+                            <div>&nbsp;Hiking</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="select-item" data-value="biking7">
+                        <div class="switch-label">
+                            <span class="maki maki-marker-stroked maki-lg" style="color:#b3de69"></span>
+                            <div>&nbsp;Biking</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="select-item" data-value="vistas7">
+                        <div class="switch-label">
+                            <span class="maki maki-marker-stroked maki-lg" style="color:#ebeb71"></span>
+                            <div>&nbsp;Vistas</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="select-item" data-value="stargazing7">
+                        <div class="switch-label">
+                            <span class="maki maki-marker-stroked maki-lg" style="color:#80b1d3"></span>
+                            <div>&nbsp;Stargazing</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="select-item" data-value="picnics7">
+                        <div class="switch-label">
+                            <span class="maki maki-marker-stroked maki-lg" style="color:#fdb462"></span>
+                            <div>&nbsp;Picnics</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="select-item" data-value="arts7">
+                        <div class="switch-label">
+                            <span class="maki maki-marker-stroked maki-lg" style="color:#bebada"></span>
+                            <div>&nbsp;Arts & Culture</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="select-item" data-value="spiritual7">
+                        <div class="switch-label">
+                            <span class="maki maki-marker-stroked maki-lg" style="color:#fb8072"></span>
+                            <div>&nbsp;Spiritual</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </li>
+        <li>
             <div class="select-item parent" data-value="retail">
                 <div class="switch-label">
                     <span class="parent-icon icon glyphicon glyphicon-plus"></span>
