--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8 />
 <!-- <title>GetAround Sedona!</title>
  -->
-<title>Get Around Sedona!</title>
+<title>Sedona Secret 7</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="shortcut icon" href="https://walksedona.com/assets/sedona.ico" type="image/x-icon" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
